--- a/OBCViewer/Makefile
+++ b/OBCViewer/Makefile
@@ -1,14 +1,15 @@
+  GNU nano 6.2                        Makefile                                  
 # Makefile for OBCViewer
 # Developed for Linux can be ran by just make
 
 # CPP file & object files 
 OBCViewer: OBCViewer.o 
-	g++ -o OBCViewer OBCViewer.cpp
+        g++ -c OBCViewer.cpp
 
 # Start OBCViewer with make command
 start:
-	./OBCViewer
-	
-# Delete all Objects files
+        ./OBCViewer
+
+# Delete all Object files
 clean: 
-	rm *.o
+        rm *.o
