add -v for more information

--- a/OBCViewer/Makefile
+++ b/OBCViewer/Makefile
@@ -5,7 +5,7 @@
 
 # CPP file & object files
 OBCViewer:
-	g++ -o OBCViewer OBCViewer.cpp -O2 -g -Wall -pipe -std=c++20
+	g++ -o OBCViewer OBCViewer.cpp -O2 -g -Wall -pipe -std=c++20 -v
 
 installdeps_apt: # for APT users (Ubuntu & Debian based distros)
 	sudo apt update # (for avoiding any errors)
