--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,18 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: npm   # Replace with the appropriate package manager (npm, bundler, pip, etc.)
+    directory: "."          # Specify the directory where your dependencies are located
     schedule:
-      interval: "weekly"
+      interval: "daily"     # Set the update frequency (options: daily, weekly)
+    open-pull-requests-limit: 10  # Limit the number of open pull requests created by Dependabot
+
+ - package-ecosystem: bundler
+   directory: "/"
+   schedule:
+     interval: "daily"
+
+ Example for Python (pip):
+ - package-ecosystem: pip
+   directory: "/"
+   schedule:
+     interval: "daily"
