Mark as Testing

--- a/LOADER7VC/LOADER7VC/LOADER7VC.csproj
+++ b/LOADER7VC/LOADER7VC/LOADER7VC.csproj
@@ -11,7 +11,7 @@
     <Copyright>BJNFNE</Copyright>
     <Description></Description>
     <Product>LOADER7 Version Checker</Product>
-    <Version>1.4</Version>
+    <Version>1.5-testing</Version>
   </PropertyGroup>
 
   <ItemGroup>
