--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ Release/
 /tools/BCD1Creator/BCD1Creator
 /tools/OBCViewer/OBCViewer
 /tools/ModelPathDumper/ModelPathDumper
+tools/OBCViewer/cmake-build-debug/CMakeFiles/3.26.4/CompilerIdCXX/CMakeCXXCompilerId
