--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and Release
 
 on:
   push:
@@ -13,15 +13,36 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install g++
+    - name: Install C++ Components
       run: choco install mingw -y
 
-    - name: Compile C++20
-      run: |
-        g++ -std=c++20 ${{ github.workspace }}/rewritten-modern-software/LoaderMDO/LoaderMDO/LoaderMDO.cpp -o LoaderMDO.exe
+    - name: Compile LoaderMDO x64 version
+      run: g++ "${{ github.workspace }}/rewritten-modern-software/LoaderMDO/LoaderMDO/LoaderMDO.cpp" -o LoaderMDO.exe
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
-        name: compiled-binary
+        name: LoaderMDO
         path: LoaderMDO.exe
+
+  release:
+    needs: build
+    runs-on: windows-latest
+
+    steps:
+    - name: Download Artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: LoaderMDO
+        path: .
+
+    - name: Create Release for LoaderMDO
+      id: create_release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          LoaderMDO.exe
+        tag_name: ${{ github.sha }}
+        release_name: Release ${{ github.sha }}
+        draft: false
+        prerelease: false
