--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,20 @@ jobs:
       run: |
         RELEASE_TITLE="Release ${{ github.sha }}"
         RELEASE_BODY="This is an automatically generated release."
-        UPLOAD_URL=$(curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -H "Accept: application/vnd.github.v3+json" "https://api.github.com/repos/${{ github.repository }}/releases" -d "{\"tag_name\": \"${{ github.sha }}\",\"name\": \"${RELEASE_TITLE}\",\"body\": \"${RELEASE_BODY}\"}" | jq -r .upload_url)
-        echo "Upload URL: $UPLOAD_URL"
-        curl -s -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -H "Accept: application/vnd.github.v3+json" -H "Content-Type: application/octet-stream" --data-binary "@LoaderMDO.exe" "${UPLOAD_URL/\{?name,label\}/}?name=LoaderMDO.exe"
+
+        # Create a new release
+        RESPONSE=$(curl -s -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github.v3+json" \
+          "https://api.github.com/repos/${{ github.repository }}/releases" \
+          -d "{\"tag_name\": \"${{ github.sha }}\",\"name\": \"${RELEASE_TITLE}\",\"body\": \"${RELEASE_BODY}\"}")
+
+        # Extract the release ID from the response
+        RELEASE_ID=$(echo "$RESPONSE" | jq -r '.id')
+
+        # Upload the artifact to the release
+        curl -s -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Content-Type: application/octet-stream" \
+          --data-binary "@LoaderMDO.exe" \
+          "https://uploads.github.com/repos/${{ github.repository }}/releases/${RELEASE_ID}/assets?name=LoaderMDO.exe"
