--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,17 +7,17 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Install g++
-      run: choco install mingw -y
+      run: sudo apt-get install -y g++
 
     - name: Compile C++
-      run: g++ "${{ github.workspace }}/rewritten-modern-software/LoaderMDO/LoaderMDO/LoaderMDO.cpp" -o LoaderMDO.exe
+      run: g++ -o LoaderMDO.exe rewritten-modern-software/LoaderMDO/LoaderMDO/LoaderMDO.cpp
 
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
@@ -44,7 +44,7 @@ jobs:
 
         # Create a new release
         RESPONSE=$(curl -s -X POST \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: token ${{ secrets.DEV7_TOKEN }}" \
           -H "Accept: application/vnd.github.v3+json" \
           "https://api.github.com/repos/${{ github.repository }}/releases" \
           -d "{\"tag_name\": \"${{ github.sha }}\",\"name\": \"${RELEASE_TITLE}\",\"body\": \"${RELEASE_BODY}\"}")
@@ -54,7 +54,7 @@ jobs:
 
         # Upload the artifact to the release
         curl -s -X POST \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Authorization: token ${{ secrets.DEV7_TOKEN }}" \
           -H "Content-Type: application/octet-stream" \
           --data-binary "@LoaderMDO.exe" \
           "https://uploads.github.com/repos/${{ github.repository }}/releases/${RELEASE_ID}/assets?name=LoaderMDO.exe"
