multiple os support for workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,40 +7,58 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [windows-latest, ubuntu-latest]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Install Python 3
+    - name: Set up Python 3
+      if: matrix.os == 'ubuntu-latest'
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # Use the latest version of Python 3 available
+        python-version: '3.x'
 
     - name: Install MinGW
-      run: choco install mingw -y
+      if: matrix.os == 'windows-latest'
+      run: |
+        choco install mingw -y
 
-    - name: Compile LoaderMDO for Windows
+    - name: Install g++
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y g++
+        
+    - name: Compile LoaderMDO
+      if: matrix.os == 'windows-latest'
       run: g++ -o LoaderMDO.exe rewritten-modern-software/LoaderMDO/LoaderMDO/LoaderMDO.cpp
 
-    - name: Compile BCD1Creator for Windows
+    - name: Compile BCD1Creator
+      if: matrix.os == 'windows-latest'
       run: g++ -o BCD1Creator.exe tools/BCD1Creator/BCD1Creator.cpp
 
-    - name: Compile DEV7Launcher for Windows
+    - name: Compile DEV7Launcher
+      if: matrix.os == 'windows-latest'
       run: g++ -o DEV7Launcher.exe tools/DEV7Launcher/DEV7Launcher.cpp
 
-    - name: Create Windows directory
-      run: mkdir windows
+    - name: Compile LoaderMDO
+      if: matrix.os == 'ubuntu-latest'
+      run: g++ -o LoaderMDO rewritten-software-ports/linux/LoaderMDO/LoaderMDO.cpp
 
-    - name: Copy Windows executable to directory
-      run: |
-        copy LoaderMDO.exe windows/
-        copy BCD1Creator.exe windows/
-        copy DEV7Launcher.exe windows/
+    - name: Compile BCD1Creator
+      if: matrix.os == 'ubuntu-latest'
+      run: g++ -o BCD1Creator tools/BCD1Creator/BCD1Creator.cpp
+
+    - name: Compile DEV7Launcher
+      if: matrix.os == 'ubuntu-latest'
+      run: g++ -o DEV7Launcher tools/DEV7Launcher/DEV7Launcher.cpp
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v2
       with:
         name: compiled-stuff
-        path: windows/
