--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: compiled-stuff
+          name: compiled-linux
           path: |
             LoaderMDO
             BCD1Creator
