--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: compiled-stuff
+          name: compiled-windows
           path: |
             LoaderMDO.exe
             BCD1Creator.exe
