--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Compile ModelPathDumper
         run: g++ -o ModelPathDumper.exe tools/ModelPathDumper/ModelPathDumper.cpp
 
-      - name: Compile OBCViewer
-        run: g++ -o OBCViewer.exe tools/OBCViewer/OBCViewer.cpp
+     # - name: Compile OBCViewer
+      #  run: g++ -o OBCViewer.exe tools/OBCViewer/OBCViewer.cpp
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
@@ -49,5 +49,5 @@ jobs:
             DEV7Launcher.exe
             OBJDumper.exe
             ModelPathDumper.exe
-            OBCViewer.exe
+          #  OBCViewer.exe
 
