--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Compile ModelPathDumper
         run: g++ -o ModelPathDumper.exe tools/ModelPathDumper/ModelPathDumper.cpp
 
+     # - name: Compile CTRKViewer
+      #  run: g++ -o CTRKViewer.exe tools/CTRKViewer/CTRKViewer.cpp
+
      # - name: Compile OBCViewer
       #  run: g++ -o OBCViewer.exe tools/OBCViewer/OBCViewer.cpp
 
