add CTRKViewer to linux workflow

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -40,3 +40,4 @@ jobs:
             binaries/ModelPathDumper/ModelPathDumper
             binaries/OBJDumper/OBJDumper
             binaries/OBCViewer/OBCViewer
+            binaries/CTRKViewer/CTRKViewer
