--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,8 @@ Release/
 /binaries/OBJDumper
 /binaries/CTRKViewer
 
+# Rewritten Software Ports 
+rewritten-software-ports/linux/LoaderMDO/LoaderMDO
+
 # Additional Tools stuff
 binaries/CMakeCXXCompilerId
