--- a/.github/workflows/msvc600.yml
+++ b/.github/workflows/msvc600.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Windows (MSVC 6.0)
 
 on:
   push:
@@ -6,13 +6,11 @@ on:
       - master
 
 jobs:
-
   build:
-
     runs-on: windows-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout Code
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
@@ -20,19 +18,30 @@ jobs:
     - name: Install Visual C++ 6.0
       run: |
         git clone --depth 1 https://github.com/itsmattkc/MSVC600
+        cd MSVC600
+        # Any additional setup steps for MSVC600
+        # Assuming this repository provides a working environment
+        # Otherwise you might need to install MSVC 6.0 locally and configure it
 
-    - name: Build
+    - name: Setup MSVC 6.0 Environment
       shell: cmd
       run: |
         call MSVC600/VC98/Bin/vcvars32.bat
-        rewritten-original-software/SYSTEM/SYSTEM.dsw /make # Original SYSTEM
-        rewritten-original-software/LoaderMDO/LoaderMDO.dsw /make # LoaderMDO
-        msdev LoaderMDO.dsw /make
 
-        - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: compiled-windows600
-          path: |
-            SYSTEM.EXE
-            LoaderMDO.exe
+    - name: Build SYSTEM Project
+      shell: cmd
+      run: |
+        msdev rewritten-original-software/SYSTEM/SYSTEM.dsw /MAKE "SYSTEM - Win32 Release"
+
+    - name: Build LoaderMDO Project
+      shell: cmd
+      run: |
+        msdev rewritten-original-software/LoaderMDO/LoaderMDO.dsw /MAKE "LoaderMDO - Win32 Release"
+
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: compiled-windows600
+        path: |
+          rewritten-original-software/SYSTEM/Release/SYSTEM.exe
+          rewritten-original-software/LoaderMDO/Release/LoaderMDO.exe
