--- a/tools/OBCViewer/CMakeLists.txt
+++ b/tools/OBCViewer/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.24)
-#cmake_minimum_required(VERSION 3.26) (remove # if minimium cmake version should be 3.26)
+cmake_minimum_required(VERSION 3.29.5)
+#cmake_minimum_required(VERSION 3.24)
 project(OBCViewer)
 
 set(CMAKE_CXX_STANDARD 17)
