--- a/tools/BCD1Creator/CMakeLists.txt
+++ b/tools/BCD1Creator/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.29.5)
 #cmake_minimum_required(VERSION 3.24)
 project(BCD1Creator)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
 add_executable(BCD1Creator BCD1Creator.cpp)
