add CMake compiler flags to CMake configs

--- a/tools/DEV7Launcher/CMakeLists.txt
+++ b/tools/DEV7Launcher/CMakeLists.txt
@@ -5,4 +5,6 @@ project(DEV7Launcher)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
+set(CMAKE_CXX_FLAGS "-O2 -pipe -s")
+
 add_executable(DEV7Launcher DEV7Launcher.cpp)
