--- a/tools/BCD1Creator/CMakeLists.txt
+++ b/tools/BCD1Creator/CMakeLists.txt
@@ -5,4 +5,6 @@ project(BCD1Creator)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
+set(CMAKE_CXX_FLAGS "-O2 -pipe -s")
+
 add_executable(BCD1Creator BCD1Creator.cpp)
