--- a/tools/DEV7Launcher/CMakeLists.txt
+++ b/tools/DEV7Launcher/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.29.5)
 #cmake_minimum_required(VERSION 3.24)
 project(DEV7Launcher)
+message("-- DEV7Launcher - CMake compilation")
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
