--- a/tools/OBJDumper/CMakeLists.txt
+++ b/tools/OBJDumper/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.29.5)
 #cmake_minimum_required(VERSION 3.24)
 project(OBJDumper)
+message("-- OBJDumper - CMake compilation")
+
 
 set(CMAKE_CXX_STANDARD 17)
 
