add checks for unistd.h present in CMake configs

--- a/tools/OBCViewer/CMakeLists.txt
+++ b/tools/OBCViewer/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.29.5)
-#cmake_minimum_required(VERSION 3.24)
+# cmake_minimum_required(VERSION 3.24)
 project(OBCViewer)
 message("-- OBCViewer - CMake compilation")
 
@@ -7,5 +7,20 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
 set(CMAKE_CXX_FLAGS "-O2 -pipe -s")
+
+# Check if the system is Linux
+if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
+    # Check if unistd.h is available
+    include(CheckIncludeFile)
+    check_include_file("unistd.h" HAVE_UNISTD_H)
+
+    if(HAVE_UNISTD_H)
+        message("-- unistd.h is present on Linux")
+    else()
+        message("-- unistd.h is NOT present on Linux")
+    endif()
+else()
+    message("-- This is not a Linux system, skipping unistd.h check.")
+endif()
 
 add_executable(OBCViewer OBCViewer.cpp)
