--- a/tools/DEV7Launcher/CMakeLists.txt
+++ b/tools/DEV7Launcher/CMakeLists.txt
@@ -6,6 +6,6 @@ message("-- DEV7Launcher - CMake compilation")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
-set(CMAKE_CXX_FLAGS "-O2 -pipe -s")
+set(CMAKE_CXX_FLAGS "-O2")
 
 add_executable(DEV7Launcher DEV7Launcher.cpp)
