--- a/tools/OBJDumper/CMakeLists.txt
+++ b/tools/OBJDumper/CMakeLists.txt
@@ -6,4 +6,6 @@ message("-- OBJDumper - CMake compilation")
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED 17)
 
+set(CMAKE_CXX_FLAGS "-O2")
+
 add_executable(OBJDumper OBJDumper.cpp)
