better display unistd.h checks for CMake

--- a/tools/CTRKViewer/CMakeLists.txt
+++ b/tools/CTRKViewer/CMakeLists.txt
@@ -15,12 +15,12 @@ if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
     check_include_file("unistd.h" HAVE_UNISTD_H)
 
     if(HAVE_UNISTD_H)
-        message("-- unistd.h is present on Linux")
+        message("--> unistd.h is present on Linux")
     else()
-        message("-- unistd.h is NOT present on Linux")
+        message("--> unistd.h is NOT present on Linux")
     endif()
 else()
-    message("-- This is not a Linux system, skipping unistd.h check.")
+    message("--> This is not a Linux system, skipping unistd.h check.")
 endif()
 
 add_executable(CTRKViewer CTRKViewer.cpp)
